Development
	Update spec.in file for libgda
	Switch back to using CURL instead of GIO for cover art retrieval
	Change "Save" in context menu to "Save As"
	Fix problem with localized positions in mark_uri_in_db_as_resumable 
	Fix libgda compile issue
	Rework database code to use GValues instead of sql commands, should avoid localization issues
	Apply patch from Issue #669 to fix network stream regression
	Hide some items on the context menu, when not under plugin control
	Additional changes to Japanese translation
	Updated Japanese translation
	Updated Polish translation
	Fix Issue #667 - Subtitles not hidden by default when specified
	Updated Korean and Portuguese translations
	Add "Play Single Track from Playlist" under Edit menu
	Mark streams and CDs as playable when adding to playlist
	Present a warning message when about to overwrite a file on save
	Resize player when on video present event
	Fix some layout issues when playing audio only files
	Ensure the Gvalue contains a double before trying to use it
	Ellipsize items on the playlist, so they don't add extra spacing to the list
	Add gl3 to list of available VOs. make sure mplayer2 supports this on your setup before setting
	Save media state in file->open and file->recent selections
	Rework UBUNTU_MENUPROXY reading
	Add some extra debug information for enable_global_menu
	Fix cut and paste error with vbox padding
	Prevent assertion warning in database retrieval code
	Fix fullscreen icon used in place of play icon, problem caused by symbolic icon fix (Issue #656)
	Only update the database when we really want to change something, speeds things up on load
	Keep code from infinitly looping if audio device is not found
	Apply patch to compile with libgda4 or libgda5
    Fix some problems on initial volume setup, when pulseaudio device query is slow
    Don't monitor system volume, when running in softvol mode
	Update metadata in database as needed
	Don't reset unchanged values in the database