@@ -81,6 +81,8 @@ GtkWidget *fs_event_box;
 GmtkMediaTracker *tracker;
 GtkWidget *vol_slider;
 
+GtkWidget *conf_volume_label;
+
 #ifdef GTK2_12_ENABLED
 #else
 GtkTooltips *tooltip;
