@@ -1,4 +1,5 @@
 Development
+	Add volume control type display to preference screen
 	Update spec.in file for libgda
 	Switch back to using CURL instead of GIO for cover art retrieval
 	Change "Save" in context menu to "Save As"
